@@ -3,6 +3,7 @@
 
 1.3-6 (04/12/2017)
   * optimized the code for computing the slores rule.
+  * added Slores screening without active cycling (-NAC) for logistic regression, research usage only.
 
 1.3-5 (03/29/2017)
   * redocumented using Roxygen2.
